V0.19.0
---------
 * Allow dragging from some disabled widgets.
 * Added an option (to Kvantum Manager) for setting the toolbar icon size to the font height if possible.

V0.18.0
---------
 * Use PE_FrameStatusBarItem with Qt ≥ 5.13.0 and return from it.
 * Made toolbars unmovable by default.
 * Added some effects to the labels of Kvantum Manager's About dialog.
 * Don't let the width of a push button that has text be smaller than 80px (although the minimum width may be greater because it depends on the font).
 * Replace text tabs with spaces when calculating label sizes (because text tabs aren't expanded when labels are drawn).
 * Always draw the tab text in a single line.
 * Horizontally smaller menus when they have accelerators.
 * Respect the key "no_inactiveness" with all widgets.
 * Get tooltip shadow dimensions only once if compositing is available.
 * Draw the icon of the menubar item instead of its text if it's given.
 * Fixed the field growth policy of centered form layouts.
 * A better window dragging code (x11drag) with Qt ≥ 5.15, that works under X11 and Wayland alike by calling the window manager.
 * Added an option (to Kvantum Manager) for dragging windows from buttons.
 * Considered a rare case of window type change for window translucency and dragging.
 * Removed the scroll jump workaround. It interfered with animations and cluttered the code to partially compensate for Qt's scroll jumps that appeared with mouse gestures.

V0.17.0
---------
 * Also, take care of widgets without interior SVG elements on a menu that has a high contrast with the window (a possible scenario that hasn't happened with any theme so far).
 * A workaround for a rare problem in QWidgetAction when menus have a high contrast with windows.
 * Fixed the text color of thin progressbars inside stylable toolbars of dark-and-light themes.
 * More accurate calculation of spinbox width under special circumstances.