@@ -96,14 +96,6 @@ QIcon Style::standardIcon(QStyle::StandardPixmap standardIcon,
 
       QPainter painter(&pm);
 
-      if (!hspec_.single_top_toolbar
-          && themeRndr_ && themeRndr_->isValid()
-          && enoughContrast(getFromRGBA(getLabelSpec(QStringLiteral("Toolbar")).normalColor),
-                            standardPalette().color(QPalette::Active,QPalette::WindowText)))
-      {
-        dspec.element = "flat-"+dspec.element;
-      }
-
       if (renderElement(&painter, dspec.element+"-down-normal", QRect(0,0,s,s)))
         return QIcon(pm);
       else break;
